[tool.poetry]
name = "code-review-assistant"
version = "0.1.0"
description = "AI powered code review assistant for python projects"
author = ["Hanna Hunde <hanna.hunde@gmail.com>"]
readme = "README.md"
packages = [{include = "code_review_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = [all], version = "0.9.0"}
rich = "^13.7.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.poetry.scripts]
code-review = "code_review_assistant.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true